MongoDB + Oauth works with React client now

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,4 +10,7 @@ html
     link(rel="stylesheet" href="/style.css")
   body
     div#root
+      div.NavButtons
+      a(href="http://localhost:3001/")
+        div.NavButton Go to React client
       block layout-content
